# diandianpay-rs

./: Cargo.toml
src/endpoints/payment/: endpoint.rs  mod.rs  request.rs  response.rs  schema.rs
src/framework/: endpoint.rs  mod.rs  serde.rs  signature.rs
src/framework/client/: async_api.rs  blocking_api.rs
src/framework/response/: api_fail.rs  mod.rs
